--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "react"
     ],
     "rules": {
+        "no-unused-vars": "off",
         "semi": [
             "error",
             "always"
